# train-ict

./: .gitignore  README.md  analyze_chart.py  pyproject.toml  pyrightconfig.json  requirements.txt  vex.py  vexcommands.md
.agent/: rules.md
Collected_ICT_Data/: SUMMARY.md  connected_trades.csv  journal.md
Collected_ICT_Data/Charts/: EURUSD_2025-09-25_22-34-05_analysis.json
config/: default_config.yaml
data/: README.md
data/learning/: learned_concepts.json
data/playbooks/: anti_examples.md
data/schemas/: README.md  concept_relationships.yaml  ict_ontology.yaml  ict_trade_setup.schema.json  trade_object.json
docs/: BLIND_TEST_LEARNINGS_001.md  CODEBASE_AUDIT_REPORT.md  SESSION_MEMORY_2026-01-20.md  VEX Trading Complete Proces.txt  VEX_IDENTITY.md  VEX_SYSTEM_PROMPT.md  implementation_plan_20260117.md
hub/: dashboard.html
journal/: README.md  index.md  pre_trade_scoring.md  schema.sql  trades_database.json
journal/ashton/: index.html  trades_database.json
journal/forward_testing/: 2026-01-20_GBPUSD_Outlook.md
journal/lessons/: compiled_lessons.md
journal/templates/: daily_session_template.md  in_trade_checkpoint.md  post_review.md  psychology_session.md  stop_card.md  trade_entry.md
journal/vex/: 2026-01-16.json
knowledge_base/: ICT_LEARNING_SYSTEM.md  ICT_MASTER_LIBRARY.md  terminology.yaml
knowledge_base/concepts/: a_plus_setup_template.md
knowledge_base/models/: ict_2026_smart_money_jan_06.md  (+3 more)
scripts/: README.md  live_trading_demo.py  markup_gbpjpy.py  run_backtest.py  seed_knowledge.py
tests/: test_detectors.py
(+111 files in other folders)
